<resources>
  <string name="app_name">Locker</string>
  <string name="expo_system_ui_user_interface_style" translatable="false">automatic</string>
  <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>

  <!-- Locker config -->
  <string name="service_name">Locker</string>
  <string name="locker">Locker</string>
  <string name="facebook_app_id">1260309664112849</string>
  <string name="facebook_client_token">082ae6329b491d0314aa527e2f83179e</string>
  <string name="mp_title">Locker Password Manager</string>
  <string name="mp_subtitle">Enter your Master Password to unlock</string>
  <string name="mp_master_pass">Master Password</string>
  <string name="mp_login">Unlock</string>
  <string name="mp_faceid">Use Face id/Touch id</string>
  <string name="cancel">Cancel</string>
  <string name="title_activity_login_list">LoginList</string>
  <string name="tab_text_1">Tab 1</string>
  <string name="tab_text_2">Tab 2</string>
  <string name="asset_statements" translatable="false">
    [{
        \"include\": \"https://locker.io/.well-known/assetlinks.json\"
    }]
    </string>
  <string name="fake_police">Giả mạo công an / dịch vụ công</string>
  <string name="fake_electricity_company">Lừa đảo đóng tiền điện nước</string>
  <string name="fake_bank_credit_securities">Giả mạo, lừa đảo ngân hàng / tín dụng / chứng khoán</string>
  <string name="phone_spam">Nháy máy spam</string>
  <string name="online_delivery">Giao hàng trực tuyến</string>
  <string name="fake_ads_prize">Quảng cáo / trúng thưởng</string>
  <string name="other">Khác</string>
</resources>